refactor: add BYTES versions of PRUNE environment variables

--- a/.env.example
+++ b/.env.example
@@ -73,7 +73,7 @@ MAX_PARAMS_PER_REQUEST=100
 MIN_USER_NAME_LENGTH=4
 
 # Maximum allowed string length of a username.
-MAX_USER_NAME_LENGTH=25
+MAX_USER_NAME_LENGTH=16
 
 # Minimum allowed string length of a user email.
 MIN_USER_EMAIL_LENGTH=4
@@ -101,9 +101,12 @@ MAX_QUESTION_BODY_LENGTH_BYTES=3kb
 # 500b.
 MAX_ANSWER_BODY_LENGTH_BYTES=3kb
 
+# Maximum allowed length of a question subject.
+MAX_MAIL_SUBJECT_LENGTH=75
+
 # Maximum allowed size of an mail (direct message) body. Should be a string like
 # 1kb, 1mb, 500b.
-MAX_MAIL_BODY_LENGTH_BYTES=150b
+MAX_MAIL_BODY_LENGTH_BYTES=512b
 
 ### EXTERNAL SCRIPT VARIABLES ###
 # (optional unless using the relevant external script)
@@ -129,25 +132,30 @@ BAN_HAMMER_DEFAULT_BAN_TIME_MINUTES=15
 # minutes instead of the default. This is also the length of the "period".
 BAN_HAMMER_RECIDIVISM_PUNISH_MULTIPLIER=4
 
-# The size of the root request-log collection will not be allowed to exceed this
-# amount. Oldest entries are deleted first.
-PRUNE_DATA_MAX_LOGS=100000
+# The size (in bytes) of the root request-log collection will not be allowed to
+# exceed this amount. Oldest entries are deleted first. Should be a string like
+# 1kb, 1mb, 500b.
+PRUNE_DATA_MAX_LOGS_BYTES=50mb
 
-# The size of the root limited-log collection will not be allowed to exceed
-# this amount. Oldest entries are deleted first.
-PRUNE_DATA_MAX_BANNED=100000
+# The size (in bytes) of the root limited-log collection will not be allowed to
+# exceed this amount. Oldest entries are deleted first. Should be a string like
+# 1kb, 1mb, 500b.
+PRUNE_DATA_MAX_BANNED_BYTES=10mb
 
-# The size of the mail collection will not be allowed to exceed this
-# amount. Oldest entries are deleted first.
-PRUNE_DATA_MAX_MAIL=50000
+# The size (in bytes) of the mail collection will not be allowed to exceed this
+# amount. Oldest entries are deleted first. Should be a string like 1kb, 1mb,
+# 500b.
+PRUNE_DATA_MAX_MAIL_BYTES=50mb
 
-# The size of the questions collection will not be allowed to exceed this
-# amount. Oldest entries are deleted first.
-PRUNE_DATA_MAX_QUESTIONS=50000
+# The size (in bytes) of the questions collection will not be allowed to exceed
+# this amount. Oldest entries are deleted first. Should be a string like 1kb,
+# 1mb, 500b.
+PRUNE_DATA_MAX_QUESTIONS_BYTES=250mb
 
-# The size of the users collection will not be allowed to exceed this amount.
-# Oldest entries are deleted first.
-PRUNE_DATA_MAX_USERS=100000
+# The size (in bytes) of the users collection will not be allowed to exceed this
+# amount. Oldest entries are deleted first. Should be a string like 1kb, 1mb,
+# 500b.
+PRUNE_DATA_MAX_USERS_BYTES=75mb
 
 ### TOOLS FRONTEND VARIABLES ###
 # (optional unless using tools)
