--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "@xunnamius/jest-types": "^1.1.3",
     "babel-jest": "^28.1.2",
     "babel-loader": "^8.2.5",
+    "chalk": "^4.1.2",
     "confusing-browser-globals": "^1.0.11",
     "conventional-changelog-cli": "^2.2.2",
     "dotenv": "^16.0.1",
