--- a/package.json
+++ b/package.json
@@ -97,7 +97,8 @@
     "@types/clone-deep": "^4.0.1",
     "@types/confusing-browser-globals": "^1.0.0",
     "@types/content-type": "^1.1.5",
-    "@types/jest": "^28.1.4",
+    "@types/jest": "^28.1.5",
+    "@types/jsonfile": "^6.1.0",
     "@types/node-fetch": "^2.5.12",
     "@types/semver": "^7.3.10",
     "@types/tar-stream": "^2.2.2",
@@ -129,9 +130,10 @@
     "jest-environment-jsdom": "^28.1.2",
     "jest-extended": "^3.0.0",
     "jest-silent-reporter": "^0.5.0",
+    "jsonfile": "^6.1.0",
     "lint-staged": "^13.0.3",
     "mongodb-memory-server": "^8.7.2",
-    "msw": "^0.43.1",
+    "msw": "^0.44.0",
     "next-test-api-route-handler": "^3.1.6",
     "prettier": "^2.7.1",
     "random-case": "^1.0.0",
