refactor(env): add SLACKAPPS_CLIENT_SECRET

--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,10 @@ MONGODB_URI=mongodb://127.0.0.1:27017
 # database connection is memoized.
 MONGODB_MS_PORT=6666
 
+# The SlackApps client key used to ensure the initialize-data external script
+# has a much higher request quota.
+SLACKAPPS_CLIENT_SECRET=
+
 # Determines the maximum allowed character length of an *entire* HTTP
 # Authorization header. The default is 500.
 AUTH_HEADER_MAX_LENGTH=500
