refactor(env): correct SLACKAPPS => STACKAPPS_CLIENT_SECRET

--- a/.env.example
+++ b/.env.example
@@ -28,7 +28,7 @@ MONGODB_MS_PORT=6666
 
 # The SlackApps client key used to ensure the initialize-data external script
 # has a much higher request quota.
-SLACKAPPS_CLIENT_SECRET=
+STACKAPPS_AUTH_KEY=
 
 # Determines the maximum allowed character length of an *entire* HTTP
 # Authorization header. The default is 500.
