--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-use": "^17.4.0",
-    "request-ip": "3.0.2",
+    "request-ip": "3.3.0",
     "swr": "^1.3.0",
     "toss-expression": "^0.1.1",
     "typescript": "^4.7.4"
@@ -108,6 +108,7 @@
     "@typescript-eslint/parser": "^5.31.0",
     "@xunnamius/conventional-changelog-projector": "^1.1.1",
     "@xunnamius/jest-types": "^1.1.3",
+    "auto-bind": "^4.0.0",
     "babel-jest": "^28.1.3",
     "babel-loader": "^8.2.5",
     "chalk": "^4.1.2",
@@ -119,7 +120,7 @@
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-import-resolver-typescript": "^3.3.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^26.6.0",
+    "eslint-plugin-jest": "^26.7.0",
     "eslint-plugin-jest-dom": "^4.0.2",
     "eslint-plugin-react": "^7.30.1",
     "execa": "^5.1.1",
@@ -153,12 +154,12 @@
     "remark-reference-links": "^6.0.1",
     "remark-validate-links": "^12.0.0",
     "semantic-release": "https://xunn.at/semantic-release-atam",
-    "simple-git": "^3.10.0",
+    "simple-git": "^3.11.0",
     "sort-package-json": "^1.57.0",
     "spellchecker": "^3.7.1",
     "test-listen": "^1.1.0",
     "text-extensions": "^2.4.0",
-    "type-fest": "^2.17.0",
+    "type-fest": "^2.18.0",
     "typedoc": "^0.23.9",
     "typedoc-plugin-markdown": "^3.13.4",
     "unfetch": "^4.2.0",
