refactor(env): fix comments, add interval-related constants

--- a/.env.example
+++ b/.env.example
@@ -26,9 +26,17 @@ MONGODB_URI=mongodb://127.0.0.1:27017
 # database connection is memoized.
 MONGODB_MS_PORT=6666
 
-# The SlackApps client key used to ensure the initialize-data external script
+# The StackExchange client key used to ensure the initialize-data external script
 # has a much higher request quota.
 STACKAPPS_AUTH_KEY=
+
+# A maximum of STACKAPPS_INTERVAL_PERIOD_MS requests will be sent to the
+# StackExchange API every >=STACKAPPS_MAX_REQUESTS_PER_INTERVAL milliseconds.
+STACKAPPS_INTERVAL_PERIOD_MS=1000
+
+# A maximum of STACKAPPS_INTERVAL_PERIOD_MS requests will be sent to the
+# StackExchange API every >=STACKAPPS_MAX_REQUESTS_PER_INTERVAL milliseconds.
+STACKAPPS_MAX_REQUESTS_PER_INTERVAL=25
 
 # Determines the maximum allowed character length of an *entire* HTTP
 # Authorization header. The default is 500.
