--- a/package.json
+++ b/package.json
@@ -45,19 +45,19 @@
     }
   },
   "dependencies": {
-    "@babel/core": "^7.18.9",
-    "@babel/plugin-proposal-export-default-from": "^7.18.9",
+    "@babel/core": "^7.18.10",
+    "@babel/plugin-proposal-export-default-from": "^7.18.10",
     "@babel/plugin-proposal-function-bind": "^7.18.9",
     "@babel/plugin-transform-react-jsx-source": "^7.18.6",
-    "@babel/preset-env": "^7.18.9",
+    "@babel/preset-env": "^7.18.10",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
-    "@next/bundle-analyzer": "^12.2.3",
+    "@next/bundle-analyzer": "^12.2.4",
     "@types/bytes": "^3.1.1",
     "@types/cors": "^2.8.12",
     "@types/debug": "^4.1.7",
-    "@types/node": "^18.6.3",
-    "@types/react": "^18.0.15",
+    "@types/node": "^18.6.5",
+    "@types/react": "^18.0.17",
     "@types/request-ip": "^0.0.37",
     "@xunnamius/next-types": "^1.0.9",
     "@xunnamius/types": "^1.3.0",
@@ -72,7 +72,7 @@
     "is-server-side": "^1.0.2",
     "mongodb": "^4.8.1",
     "named-app-errors": "^4.0.0",
-    "next": "^12.2.3",
+    "next": "^12.2.4",
     "node-fetch": "cjs",
     "raw-body": "^2.5.1",
     "react": "^18.2.0",
@@ -84,19 +84,20 @@
     "typescript": "^4.7.4"
   },
   "devDependencies": {
-    "@babel/cli": "^7.18.9",
+    "@babel/cli": "^7.18.10",
     "@babel/eslint-parser": "^7.18.9",
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
-    "@next/eslint-plugin-next": "^12.2.3",
+    "@next/eslint-plugin-next": "^12.2.4",
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
-    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@types/clone-deep": "^4.0.1",
     "@types/confusing-browser-globals": "^1.0.0",
     "@types/content-type": "^1.1.5",
+    "@types/inquirer": "^9.0.0",
     "@types/jest": "^28.1.6",
     "@types/jsonfile": "^6.1.0",
     "@types/node-fetch": "^2.5.12",
@@ -104,8 +105,8 @@
     "@types/tar-stream": "^2.2.2",
     "@types/test-listen": "^1.1.0",
     "@types/webpack": "^5.28.0",
-    "@typescript-eslint/eslint-plugin": "^5.31.0",
-    "@typescript-eslint/parser": "^5.31.0",
+    "@typescript-eslint/eslint-plugin": "^5.33.0",
+    "@typescript-eslint/parser": "^5.33.0",
     "@xunnamius/conventional-changelog-projector": "^1.1.1",
     "@xunnamius/jest-types": "^1.1.3",
     "auto-bind": "^4.0.0",
@@ -115,21 +116,22 @@
     "confusing-browser-globals": "^1.0.11",
     "conventional-changelog-cli": "^2.2.2",
     "dotenv": "^16.0.1",
-    "eslint": "^8.20.0",
-    "eslint-config-next": "^12.2.3",
+    "eslint": "^8.21.0",
+    "eslint-config-next": "^12.2.4",
     "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-import-resolver-typescript": "^3.3.0",
+    "eslint-import-resolver-typescript": "^3.4.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^26.7.0",
+    "eslint-plugin-jest": "^26.8.2",
     "eslint-plugin-jest-dom": "^4.0.2",
     "eslint-plugin-react": "^7.30.1",
     "execa": "^5.1.1",
     "http-terminator": "^3.2.0",
     "husky": "^8.0.1",
+    "inquirer": "^8.2.4",
     "jest": "^28.1.3",
     "jest-circus": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
-    "jest-extended": "^3.0.1",
+    "jest-extended": "^3.0.2",
     "jest-silent-reporter": "^0.5.0",
     "jsonfile": "^6.1.0",
     "lint-staged": "^13.0.3",
@@ -154,13 +156,13 @@
     "remark-reference-links": "^6.0.1",
     "remark-validate-links": "^12.0.0",
     "semantic-release": "https://xunn.at/semantic-release-atam",
-    "simple-git": "^3.11.0",
+    "simple-git": "^3.12.0",
     "sort-package-json": "^1.57.0",
     "spellchecker": "^3.7.1",
     "test-listen": "^1.1.0",
     "text-extensions": "^2.4.0",
     "type-fest": "^2.18.0",
-    "typedoc": "^0.23.9",
+    "typedoc": "^0.23.10",
     "typedoc-plugin-markdown": "^3.13.4",
     "unfetch": "^4.2.0",
     "unique-filename": "^1.1.1",
