--- a/.env.example
+++ b/.env.example
@@ -26,18 +26,6 @@ MONGODB_URI=mongodb://127.0.0.1:27017
 # database connection is memoized.
 MONGODB_MS_PORT=6666
 
-# The StackExchange client key used to ensure the initialize-data external script
-# has a much higher request quota.
-STACKAPPS_AUTH_KEY=
-
-# A maximum of STACKAPPS_INTERVAL_PERIOD_MS requests will be sent to the
-# StackExchange API every >=STACKAPPS_MAX_REQUESTS_PER_INTERVAL milliseconds.
-STACKAPPS_INTERVAL_PERIOD_MS=1000
-
-# A maximum of STACKAPPS_INTERVAL_PERIOD_MS requests will be sent to the
-# StackExchange API every >=STACKAPPS_MAX_REQUESTS_PER_INTERVAL milliseconds.
-STACKAPPS_MAX_REQUESTS_PER_INTERVAL=25
-
 # Determines the maximum allowed character length of an *entire* HTTP
 # Authorization header. The default is 500.
 AUTH_HEADER_MAX_LENGTH=500
@@ -157,17 +145,53 @@ PRUNE_DATA_MAX_BANNED_BYTES=10mb
 # The size (in bytes) of the mail collection will not be allowed to exceed this
 # amount. Oldest entries are deleted first. Should be a string like 1kb, 1mb,
 # 500b.
-PRUNE_DATA_MAX_MAIL_BYTES=50mb
+PRUNE_DATA_MAX_MAIL_BYTES=10mb
 
 # The size (in bytes) of the questions collection will not be allowed to exceed
 # this amount. Oldest entries are deleted first. Should be a string like 1kb,
 # 1mb, 500b.
-PRUNE_DATA_MAX_QUESTIONS_BYTES=250mb
+PRUNE_DATA_MAX_QUESTIONS_BYTES=350mb
 
 # The size (in bytes) of the users collection will not be allowed to exceed this
 # amount. Oldest entries are deleted first. Should be a string like 1kb, 1mb,
 # 500b.
-PRUNE_DATA_MAX_USERS_BYTES=75mb
+PRUNE_DATA_MAX_USERS_BYTES=10mb
+
+# The StackExchange client key used to ensure the initialize-data external script
+# has a much higher request quota.
+STACKAPPS_AUTH_KEY=
+
+# A maximum of STACKAPPS_INTERVAL_PERIOD_MS requests will be sent to the
+# StackExchange API every >=STACKAPPS_MAX_REQUESTS_PER_INTERVAL milliseconds.
+#
+# Must be a positive number such that no greater than 30 requests are sent per
+# second or the StackExchange API will rate limit you.
+STACKAPPS_INTERVAL_PERIOD_MS=1000
+
+# A maximum of STACKAPPS_INTERVAL_PERIOD_MS requests will be sent to the
+# StackExchange API every >=STACKAPPS_MAX_REQUESTS_PER_INTERVAL milliseconds.
+#
+# Must be a positive number such that no greater than 30 requests are sent per
+# second or the StackExchange API will rate limit you.
+STACKAPPS_MAX_REQUESTS_PER_INTERVAL=10
+
+# The number of questions to render from the StackExchange API, which will be
+# one less than the total number of questions inserted into the database.
+STACKAPPS_TOTAL_API_GENERATED_QUESTIONS=100
+
+# The number of answers the "collect all" questions will have.
+STACKAPPS_COLLECTALL_QUESTION_ANSWERS=150
+
+# The number of comments the "collect all" questions will have.
+STACKAPPS_COLLECTALL_QUESTION_COMMENTS=250
+
+# The number of comments the first answer of the "collect all" question will
+# have.
+STACKAPPS_COLLECTALL_FIRST_ANSWER_COMMENTS=150
+
+# The maximum number of items that will be requested from the StackExchange API.
+# Must be a positive number no greater than 100.
+STACKAPPS_MAX_PAGE_SIZE=100
 
 ### TOOLS FRONTEND VARIABLES ###
 # (optional unless using tools)
