--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
     "eslint-plugin-jest-dom": "^4.0.2",
     "eslint-plugin-react": "^7.30.1",
     "execa": "^5.1.1",
+    "html-entities": "^2.3.3",
     "http-terminator": "^3.2.0",
     "husky": "^8.0.1",
     "inquirer": "^8.2.4",
