refactor: renovate assets

--- a/.vercelignore
+++ b/.vercelignore
@@ -1,7 +1,7 @@
 # shellcheck disable=all
 # This file's syntax is only KINDA similar like .gitignore...
 
-# Ignore all root-level files
+# Ignore all files
 /*
 
 # Re-add root-level dirs
@@ -10,9 +10,17 @@
 !/src
 !/types
 
+# Re-add unpublished internal packages
+!/packages
+/packages/*
+!/packages/shared
+/packages/shared/*
+!/packages/shared/src
+!/packages/shared/package.json
+
 # Re-add root-level files
 !/.gitignore
-!/babel.config.js
+!/babel.config.cjs
 !/next.config.mjs
 !/package-lock.json
 !/package.json
