--- a/tsc.project.lint.json
+++ b/tsc.project.lint.json
@@ -13,11 +13,15 @@
   "include": ["**/*", "**/.*/**/*", "**/.*"],
   "exclude": [
     "**/dist/**/*",
-    "**/build/**/*",
+    "**/.next/**/*",
+    "**/.wrangler/**/*",
     "**/test/fixtures/**/*",
     "**/node_modules/**/*",
     "**/*.ignore",
-    "**/*.ignore.*/**/*",
-    "**/ignore.*"
+    "**/*.ignore/**/*",
+    "**/ignore.*",
+    "**/ignore.*/**/*",
+    "**/*.ignore.*",
+    "**/*.ignore.*/**/*"
   ]
 }
