--- a/package.json
+++ b/package.json
@@ -3,38 +3,51 @@
   "version": "2.2.0",
   "private": true,
   "description": "https://qoverflow.api.hscc.bdpa.org",
-  "homepage": "https://qoverflow.api.hscc.bdpa.org",
+  "homepage": "https://github.com/nhscc/qoverflow.api.hscc.bdpa.org#readme",
+  "bugs": {
+    "url": "https://github.com/nhscc/qoverflow.api.hscc.bdpa.org/issues"
+  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/nhscc/qoverflow.api.hscc.bdpa.org",
-    "lens": "next"
+    "url": "git+https://github.com/nhscc/qoverflow.api.hscc.bdpa.org.git"
   },
-  "license": "MIT",
   "author": "Xunnamius",
   "type": "commonjs",
   "workspaces": [
+    "packages/*",
     "!packages/*.ignore*",
-    "packages/*"
+    "!packages/ignore.*"
   ],
   "scripts": {
-    "build": "next build",
+    "build": "NODE_ENV=production npx next build",
+    "build:changelog": "symbiote build changelog --env NODE_NO_WARNINGS=1",
+    "build:dist": "rejoin This package is does not have buildable distributables",
+    "build:docs": "rejoin This package does not have buildable documentation",
+    "build:topological": "symbiote project topology --run build --env NODE_NO_WARNINGS=1 --skip qoverflow.api.hscc.bdpa.org",
     "clean": "symbiote clean --env NODE_NO_WARNINGS=1",
     "dev": "next -p `npx -q acquire-port`",
     "format": "symbiote format --env NODE_NO_WARNINGS=1 --hush",
-    "lint": "symbiote lint --env NODE_NO_WARNINGS=1 --hush --scope unlimited",
+    "info": "symbiote project info --env NODE_NO_WARNINGS=1",
+    "lint": "npm run lint:package --",
+    "lint:package": "symbiote lint --env NODE_NO_WARNINGS=1 --hush",
+    "lint:packages": "symbiote lint --env NODE_NO_WARNINGS=1 --hush --scope unlimited",
+    "lint:project": "symbiote project lint --env NODE_NO_WARNINGS=1",
+    "lint:topological": "symbiote project topology --run lint --env NODE_NO_WARNINGS=1",
     "list-tasks": "symbiote list-tasks --env NODE_NO_WARNINGS=1 --scope this-package",
     "prepare": "symbiote project prepare --env NODE_NO_WARNINGS=1",
-    "start": "next start",
-    "test": "npm run test-unit --",
-    "test-all": "NODE_OPTIONS='--experimental-vm-modules --no-warnings' NODE_ENV=test jest $JEST_CLI --coverage",
-    "test-e2e": "NODE_OPTIONS='--experimental-vm-modules --no-warnings' NODE_ENV=test jest $JEST_CLI '/e2e.*?\\.test\\.tsx?' --testPathIgnorePatterns '/dist/'",
-    "test-integration": "NODE_OPTIONS='--experimental-vm-modules --no-warnings' NODE_ENV=test jest $JEST_CLI '/integration.*?\\.test\\.tsx?' --testPathIgnorePatterns '/dist/'",
-    "test-integration-client": "NODE_OPTIONS='--experimental-vm-modules --no-warnings' NODE_ENV=test jest $JEST_CLI '/integration-client.*?\\.test\\.tsx?' --testPathIgnorePatterns '/dist/'",
-    "test-integration-compile": "NODE_OPTIONS='--experimental-vm-modules --no-warnings' NODE_ENV=test jest $JEST_CLI '/integration-compile.*?\\.test\\.tsx?' --testPathIgnorePatterns '/dist/'",
-    "test-integration-node": "NODE_OPTIONS='--experimental-vm-modules --no-warnings' NODE_ENV=test jest $JEST_CLI '/integration-node.*?\\.test\\.tsx?' --testPathIgnorePatterns '/dist/'",
-    "test-repeat-all": "npm run __test-repeat-all --silent",
-    "test-repeat-unit": "npm run __test-repeat-unit --silent",
-    "test-unit": "NODE_OPTIONS='--experimental-vm-modules --no-warnings' NODE_ENV=test jest $JEST_CLI --coverage --testPathIgnorePatterns '/(integration|e2e).*?\\.test\\.tsx?' '/dist/'"
+    "release": "rejoin This package is not releasable",
+    "release:topological": "symbiote project topology --run release --env NODE_NO_WARNINGS=1",
+    "renovate": "symbiote project renovate --env NODE_NO_WARNINGS=1 --github-reconfigure-repo --regenerate-assets --assets-preset nextjs",
+    "renovate:aliases": "symbiote project renovate --env NODE_NO_WARNINGS=1 --regenerate-assets --assets-preset nextjs --only-aliases",
+    "start": "symbiote start --env NODE_NO_WARNINGS=1 --",
+    "test": "npm run test:package:unit --",
+    "test:package:all": "symbiote test --env NODE_NO_WARNINGS=1 --tests all-local --coverage",
+    "test:package:e2e": "symbiote test --env NODE_NO_WARNINGS=1 --tests e2e-local",
+    "test:package:integration": "symbiote test --env NODE_NO_WARNINGS=1 --tests integration",
+    "test:package:unit": "symbiote test --env NODE_NO_WARNINGS=1 --tests unit type",
+    "test:packages:all": "symbiote test --env NODE_NO_WARNINGS=1 --tests all-local --scope unlimited --coverage",
+    "test:packages:all:unit": "symbiote test --env NODE_NO_WARNINGS=1 --tests unit type --scope unlimited --coverage",
+    "test:topological": "symbiote project topology --run test --env NODE_NO_WARNINGS=1"
   },
   "dependencies": {
     "@-xun/api": "^1.0.10",
@@ -45,6 +58,8 @@
     "@-xun/mongo-test": "^1.1.7",
     "@-xun/symbiote": "^4.11.0",
     "@-xun/types": "^1.1.0",
+    "@nhscc/backend-qoverflow": "^1.0.0",
+    "@nhscc/backend-qoverflow~npm": "npm:@nhscc/backend-qoverflow@^1.0.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@types/bytes": "^3.1.5",
@@ -66,6 +81,6 @@
     "random-case": "^1.0.0"
   },
   "engines": {
-    "node": ">=20"
+    "node": "^20.18.0 || >=22.12.0"
   }
 }
