--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -28,6 +28,10 @@
       "types": "./dist/packages/backend/src/db.d.ts",
       "default": "./dist/packages/backend/src/db.js"
     },
+    "./dummy": {
+      "types": "./dist/packages/backend/src/dummy.d.ts",
+      "default": "./dist/packages/backend/src/dummy.js"
+    },
     "./env": {
       "types": "./dist/packages/backend/src/env.d.ts",
       "default": "./dist/packages/backend/src/env.js"
@@ -45,6 +49,9 @@
       ],
       "db": [
         "dist/packages/backend/src/db.d.ts"
+      ],
+      "dummy": [
+        "dist/packages/backend/src/dummy.d.ts"
       ],
       "env": [
         "dist/packages/backend/src/env.d.ts"
@@ -85,8 +92,10 @@
   "dependencies": {
     "@-xun/api-strategy": "^1.3.6",
     "@-xun/env": "^1.1.2",
+    "@-xun/jest": "^2.2.7",
     "@-xun/mongo-item": "^1.3.0",
     "@-xun/mongo-schema": "^1.2.3",
+    "@-xun/mongo-test": "^2.1.0",
     "@-xun/types": "^1.1.0",
     "@types/bytes": "^3.1.5",
     "bytes": "^3.1.2",
@@ -97,7 +106,6 @@
     "type-fest": "^4.41.0"
   },
   "devDependencies": {
-    "@-xun/mongo-test": "^2.0.0",
     "random-case": "^1.0.0"
   },
   "engines": {
